fix: success message notice icon align center issue

--- a/packages/nc-gui/assets/style.scss
+++ b/packages/nc-gui/assets/style.scss
@@ -43,10 +43,6 @@ body {
   height: var(--topbar-height) !important;
 }
 
-.anticon-check-circle {
-  @apply !relative top-[-1px] left-0;
-}
-
 html,
 body,
 #__nuxt,
